Update docs for OpenRewrite 8.85.0